--- a/package.json
+++ b/package.json
@@ -2,23 +2,16 @@
   "name": "eshop",
   "version": "1.0.0",
   "description": "backend eshop",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "express-jwt": "^8.4.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "serverless-http": "^3.2.0"
   }
 }
