--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.0",
+    "mongoose": "^8.7.1",
     "nodemon": "^3.1.7",
     "serverless-http": "^3.2.0"
   }
